# hyphenate

./: .gitignore  CMakeLists.txt  README.md
src/: config.h.in  hyphenate.cpp
